# unplot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish-npm.yml  publish-pypi.yml
bench/: benchmark.py
compare/: INSTRUCTIONS.md  ground_truth.json  make_plots.py  score.py
getmapped/: __init__.py  curveset.py  extract.py
getmapped/axes/: calibrate.py
getmapped/curves/: rasterpaths.py  vectorpaths.py
getmapped/io/: vector.py
getmapped/qa/: confidence.py  roundtrip.py  shape.py
getmapped/separate/: separate.py
js/: .oxlintrc.json  README.md  build-demo.mjs  build-demo.ts  knip.config.ts  package-lock.json  package.json  tsconfig.demo.json  tsconfig.json
js/demo/: index.html  main.ts  make_sample.py  serve.py  tsconfig.json  verify.report.json  verify.ts
js/src/: curveset.ts  extract.ts  index.ts  num.ts  priors.ts  separate.ts
js/src/axes/: calibrate.ts
js/src/curves/: vectorpaths.ts
js/src/io/: vector.ts
js/src/qa/: confidence.ts  shape.ts
js/test/: calibrate.test.ts  curves.test.ts  extract.test.ts  gridlines.test.ts  shape.test.ts  vector.test.ts
tests/: make_synthetic.py  test_curve_selection.py  test_folded_axis.py  test_gridlines.py  test_prior_separation.py  test_raster_color.py  test_raster_monotone.py  test_roughness.py  test_vector_roundtrip.py
unplot/: __init__.py  curveset.py  extract.py
unplot/curves/: rasterpaths.py
unplot/io/: raster.py  vector.py
unplot/priors/: __init__.py
unplot/qa/: confidence.py  shape.py
